prevented table headers from distorting table column layout, as per ticket #649

--- a/cog/static/cog/css/cogstyle.css
+++ b/cog/static/cog/css/cogstyle.css
@@ -134,7 +134,6 @@ td,th {
 
 th { 
 	font-weight: bold;
-	width: 100%;
 }
 
 td.head {
